refactor: GIF 파일인 경우와 일반 파일인 경우를 구분하기 위한 응답 변경